@@ -40,7 +40,7 @@ VER_MAJOR        = 2      # The first three must match wxWidgets
 VER_MINOR        = 6
 VER_RELEASE      = 3
 VER_SUBREL       = 0      # wxPython release num for x.y.z release of wxWidgets
-VER_FLAGS        = "pre"     # release flags, such as prerelease or RC num, etc.
+VER_FLAGS        = ""     # release flags, such as prerelease or RC num, etc.
 
 DESCRIPTION      = "Cross platform GUI toolkit for Python"
 AUTHOR           = "Robin Dunn"
